--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <p id="results"></p>
 
 <p id = "para"> 
-  Welcome to Higher or Lower! Try your luck! the Dealer doesn't play fair and saps your points
-  anytime you guess wrong, so try your best guess, you start at 30 points but the dealer starts at 50,
-  hit the ace button if you're feeling lucky for double points, however if you guess the ace wrong you lose double points(the dealer does not lose double the points but he does gain double the points), everytime you guess right you take points from the dealer
+  Welcome to Higher or Lower! Try your luck! The Dealer doesn't play fair and saps your points
+  anytime you guess wrong, so try your best guess, you start at 30 points but the dealer starts at 50, If you guess right you gain
+  15 points, if you guess wrong you lose 15 points. Hit the ace button if you're feeling lucky for double points, however if you guess the ace wrong you lose double points(the dealer does not lose double the points but he does gain double the points), everytime you guess right you take points from the dealer
   whomever goes BELOW zero first loses, and whoever makes it to 100 points first wins!
 
 </p>
